--- a/sample/src/main/res/layout/layout_demo.xml
+++ b/sample/src/main/res/layout/layout_demo.xml
@@ -15,11 +15,11 @@
         android:textColor="@android:color/white"
         android:textSize="20sp" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/button_check_permissions"></android.support.v7.widget.RecyclerView>
+        android:layout_above="@+id/button_check_permissions"></androidx.recyclerview.widget.RecyclerView>
 
     <!--<ScrollView-->
     <!--android:layout_above="@+id/button_check_permissions"-->
