--- a/sample/src/main/res/layout/layout_demo.xml
+++ b/sample/src/main/res/layout/layout_demo.xml
@@ -4,10 +4,22 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button_check_permissions"
+        android:id="@+id/button_check_notification_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_margin="4dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:padding="20dp"
+        android:text="Check Notification Settings"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/button_check_permissions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button_check_notification_settings"
         android:layout_margin="4dp"
         android:backgroundTint="@color/colorPrimary"
         android:padding="20dp"
